@@ -79,4 +79,5 @@ JVM_ARGS="$JVM_ARGS \
   --add-opens=java.base/java.lang=ALL-UNNAMED \
   --add-opens=java.base/java.lang.reflect=ALL-UNNAMED \
   --add-opens=java.base/java.io=ALL-UNNAMED \
-  --add-opens=java.base/java.util=ALL-UNNAMED"
+  --add-opens=java.base/java.util=ALL-UNNAMED \
+  --sun-misc-unsafe-memory-access=allow"
